# Anchor

./: .gitignore  AGENTS.md  readme.md
.agents/skills/anchor-safe-edit/: SKILL.md
.agents/workflows/: anchor-checkpoint.md  anchor-recover.md
anchor-core/: Cargo.toml
anchor-core/src/: lib.rs  main.rs
anchor-core/src/api/: ipc.rs
anchor-core/src/recovery/: engine.rs
anchor-core/src/storage/: db.rs  snapshot.rs
anchor-core/src/tools/: daemon_client.rs  edit_file.rs  mcp_server.rs  mod.rs  read_file.rs  tool_registry.rs  write_file.rs
anchor-core/src/wal/: checkpoint.rs  mod.rs  reader.rs  writer.rs
anchor-core/src/watcher/: fs.rs
anchor-extension/: .vscodeignore  LICENSE  jest.config.cjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
anchor-extension/src/: extension.ts
anchor-extension/src/agents/: bootstrap.ts
anchor-extension/src/cdp/: bridge.ts
anchor-extension/src/git/: autocommit.ts
anchor-extension/src/ipc/: daemon-client.ts
anchor-extension/src/mcp/: registrar.ts
anchor-extension/src/recovery/: pb-decryptor.ts  pb-reader.ts  restore-ui.ts  state-repair.ts
anchor-extension/src/ui/: panel.ts  statusbar.ts
anchor-extension/src/watchers/: conversation.ts  filestate.ts
anchor-extension/tests/: autocommit.test.ts  daemon-client.test.ts  pb-reader.test.ts
anchor-ui/: package-lock.json  package.json
anchor-ui/src/: App.svelte  ConversationList.svelte  RecoveryWizard.svelte  SnapshotBrowser.svelte
docs/: architecture.md  ipc-protocol.md
scripts/: build.ps1  build.sh
