[package]
name = "anchor-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
dirs = "6"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
